--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin - Editar Produtos</title>
     <link rel="stylesheet" href="css/admin.css">
+    <link rel="icon" href="img/stg.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Painel Admin - Editar Produtos</h1>
