--- a/admin-logs.html
+++ b/admin-logs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Logs do Admin</title>
     <link rel="stylesheet" href="css/admin.css">
+    <link rel="icon" href="img/stg.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Logs do Admin</h1>
