admin arrumaado definitivamente e cart modificado

--- a/admin.html
+++ b/admin.html
@@ -7,8 +7,16 @@
     <link rel="icon" href="img/stg.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Painel Admin - Editar Produtos</h1>
-    <div id="adminContainer"></div>
+    <h1>Painel Admin</h1>
+    <div class="admin-tabs">
+        <button class="tab-btn" data-tab="produtos">Produtos</button>
+        <button class="tab-btn" data-tab="adicionar">Adicionar</button>
+        <button class="tab-btn" data-tab="editar">Editar</button>
+        <button class="tab-btn" data-tab="adicionais">Adicionais</button>
+        <button class="tab-btn" data-tab="refrigerantes">Refrigerantes</button>
+        <button class="tab-btn" data-tab="sucos">Sucos</button>
+    </div>
+    <div id="adminTabContent"></div>
     <script src="js/admin.js"></script>
 </body>
 </html>
