finalmente esta pronto esse lixo

--- a/index.html
+++ b/index.html
@@ -56,13 +56,6 @@
         </div>
 
         <ul class="cart-items" id="cartItems"></ul>
-
-        <div class="cart-saldo">
-            Saldo disponível: R$<span id="saldoUsuario">0.00</span><br>
-            <label>
-                <input type="checkbox" id="usarSaldo" onchange="atualizarTotalComSaldo()">
-                Usar saldo na compra
-            </label>
         </div>
 
         <div class="cart-total">
@@ -80,7 +73,7 @@
             <div id="freteResultado"></div>
         </div>
 
-        <button id="checkoutButton" class="checkout-button">Finalizar Compra</button>
+        <button id="checkoutButton" class="checkout-button" onclick="window.location.href='checkout.php'">Finalizar Compra</button>
     </aside>
 
     <!-- modal de opções (tamanho + adicionais) -->
@@ -160,11 +153,15 @@
                     <p>Endereço: ${data.endereco.logradouro}, ${data.endereco.bairro}, ${data.endereco.localidade} - ${data.endereco.uf}</p>
                 `;
 
-                        // Atualiza o total do carrinho com o valor do frete
-                        const cartTotalElement = document.getElementById('cartTotal');
-                        const cartTotal = parseFloat(cartTotalElement.textContent.replace(',', '.')) || 0;
-                        const totalComFrete = cartTotal + data.valorFrete;
-                        cartTotalElement.textContent = totalComFrete.toFixed(2).replace('.', ',');
+                        // Define o valor do frete globalmente
+                        window.freteValor = data.valorFrete;
+                        localStorage.setItem('frete', data.valorFrete);
+                        // Notifica outras abas sobre a atualização do frete
+                        const bc = new BroadcastChannel('frete-update');
+                        bc.postMessage({ frete: data.valorFrete });
+                        bc.close();
+                        // Atualiza o total do carrinho
+                        atualizarTotalComSaldo();
                     }
                 })
                 .catch(error => console.error('Erro:', error));
