a sla, to puto ja

--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
     <script src="js/product-options.js"></script>
     <script src="js/index.js"></script>
     <script>
+        // Limpar carrinho ao carregar a página
+        document.addEventListener('DOMContentLoaded', async function() {
+            try {
+                const response = await fetch('API/cart.php', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify([])
+                });
+                if (!response.ok) {
+                    console.error('Erro ao limpar carrinho');
+                }
+            } catch (e) {
+                console.error('Erro ao limpar carrinho', e);
+            }
+        });
+    </script>
+    <script>
         // Atualiza saldo ao carregar a página
         document.addEventListener('DOMContentLoaded', function () {
             if (typeof atualizarSaldoUsuario === 'function') {
