--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </div>
   </main>
 
+  <!-- Backdrop para mobile -->
+  <div class="cart-backdrop"></div>
+
   <!-- Botão flutuante do carrinho -->
   <div class="cart-floating">
     <button class="cart-button">
